test/tests/bad/inexhaustive-pats.carth
;; InexhaustivePats

(define foo (fun* (case [True] 0)))
